--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header style="position: relative; border-radius: 0px 0px 100px 100px;"> 
             <div class="logotip">
                 <div class="logotip__content">
-                    <a href="#"><img class="logotip__img"src="/img/multimediamusicplayerplaybutton_85798.png"></a>
+                    <a href="#"><img class="logotip__img"src="./img/multimediamusicplayerplaybutton_85798.png"></a>
                     <a href="#" class="logotip__text">music</a>
                 </div>
             </div>
@@ -73,7 +73,7 @@
         </section>
     </div>
     <div class="main__container" id="main__container">
-        <a href="#" class="main__exit content__hidden" id="main__exit"><img style=" width: 40px; height: 40px;" src="/img/x_close_icon_259101.png"></a>
+        <a href="#" class="main__exit content__hidden" id="main__exit"><img style=" width: 40px; height: 40px;" src="./img/x_close_icon_259101.png"></a>
         <div class="container content__hidden" id="container">
             <div class="form-container sign-up" >
                 <form>
